# mp3tager

./: .gitignore  README.md  mp3tag.py  mp3tagv2.py  pyproject.toml  spotij.json  test.py  test2.py  test_bin.str  walk.py
src/: mp3tagv2.py
src/domain/: domain.py
src/filesystem/: __init__.py  base.py  media.py  mp3_tag_filesystem.py
src/media/: media_file.py
src/models/: acr_model.py  aud_model.py  base.py  spoti_model.py  tag_enum.py  tag_model.py
src/reader/: audd_reader.py  base.py  reader.py  shazam.py  tag_reader.py
src/repo/: filesystem.py  media_base.py  media_file.py  tag_reader.py
src/utilities/: sequnce.py  string.py
sync/: sync.py
tests/: path_stub.py  test_filesystem.py  test_mp3tag.py  test_mp3tagv2.py
tests/e2e/filessystem/: test_filessystem.py
tests/unittests/filessystem/: test_filessystem.py
