[tool.poetry]
name = "mp3tager"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shazamapi = {git = "https://github.com/notpushkin/ShazamAPI.git"}
eyed3 = "^0.9.7"
mediafile = "^0.10.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.5"
flake8 = "^5.0.4"
pytest = "^7.2.0"


[tool.poetry.group.flake8.dependencies]
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
